# UdemyCmake

./: .gitmodules
2_CMake/01_HelloWorld_Begin/: CMakeLists.txt
2_CMake/02_BasicProject_Begin/: CMakeLists.txt  main.cpp
2_CMake/03_IntermediateProject_Begin/: CMakeLists.txt
2_CMake/04_VariablesOptions_Begin/: CMakeLists.txt
2_CMake/05_ConfigureFile_Begin/src/my_lib/: CMakeLists.txt
2_CMake/06_SourcesAndHeaders_Begin/: CMakeLists.txt  Makefile
2_CMake/06_SourcesAndHeaders_Begin/app/: CMakeLists.txt  main.cpp
2_CMake/07_ExternalGit_Begin/: CMakeLists.txt
2_CMake/07_ExternalGit_Begin/app/: CMakeLists.txt  main.cpp
2_CMake/07_ExternalGit_Begin/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/08_FetchContent_Begin/: CMakeLists.txt  Makefile
2_CMake/08_FetchContent_Begin/app/: CMakeLists.txt  main.cpp
2_CMake/08_FetchContent_Begin/cmake/: AddGitSubmodule.cmake
